# tikzpaint

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/tikzpaint/: __init__.py
src/tikzpaint/figures/: __init__.py  displayable.py  drawable.py  figure.py  options.py  projection.py
src/tikzpaint/shapes/: __init__.py  arrow.py  curve.py  image.py  line.py  path.py  point.py  surface.py  vector.py
src/tikzpaint/shapes/base/: __init__.py  arrow.py  curve.py  path.py  point.py
src/tikzpaint/shapes/displayable/: arrow.py  line.py  path.py  point.py
src/tikzpaint/shapes/displayables/: arrow.py  path.py  point.py
src/tikzpaint/util/: __init__.py  constants.py  coordinates.py  fraction.py  mathutils.py  supportConfig.py  supportOption.py  utils.py
