[metadata]
name = Tikzpaint
version = 0.0.1
author = Darin Chau
description = An easy-to-use way to generate tikz drawings
long_description = file: README.md
keywords = Tikz, Latex
license = GNU3 Public License
license_file = LICENSE
url = https://github.com/vert178/tikzpaint
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    tikzpaint
zip_safe = False
package_dir = 
    =src
python_requires = >=3.10
install_requires =
    numpy>=1.22.4
    matplotlib>=3.2.2
